[package]
name = "mockio"
version = "0.1.0"
authors = ["alexis.moscow <alexis_moscow@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "*"
pretty_env_logger = "*"
mockio-server = { path = "../mockio-server" }
